[project]
name = "uppishcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "scipy>=1.11.0",
    "ipywidgets>=8.1.7",
]
